fixed spacing on all articles

--- a/client/src/style/ArticleView/ArticleView.css
+++ b/client/src/style/ArticleView/ArticleView.css
@@ -74,6 +74,8 @@ article .content {
 
 article .content span {
   font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
 
 article .share-info {
